src/tests/snapshots/zyre__tests__snapshots__codegen_snapshots@fn_call.zy.snap
---
source: src/tests/snapshots.rs
expression: output
input_file: src/tests/fixtures/fn_call.zy
---
const std = @import("std");
const __zyre_runtime = @import("zyre_runtime.zig");
const __zyre_std_debug = @import("zyre_std_debug.zig");
const __zyre_std_fs = @import("zyre_std_fs.zig");

fn add(a: i32, b: i32) i32 {
    return (a + b);
}

pub fn main() !void {
    try __zyre_runtime.Output.init();
    defer __zyre_runtime.Output.restore();
    var __zyre_arena = std.heap.ArenaAllocator.init(std.heap.page_allocator);
    defer __zyre_arena.deinit();
    const __zyre_allocator = __zyre_arena.allocator();
    _ = __zyre_allocator;

    __zyre_std_debug.print(.{add(1, 2)});
}
