src/tests/snapshots/zyre__tests__snapshots__codegen_snapshots@if_stmt.zy.snap
---
source: src/tests/snapshots.rs
expression: output
input_file: src/tests/fixtures/if_stmt.zy
---
const std = @import("std");

fn __zyre_print(val: anytype) void {
    if (comptime @typeInfo(@TypeOf(val)) == .pointer) {
        std.debug.print("{s}\n", .{val});
    } else {
        std.debug.print("{}\n", .{val});
    }
}

pub fn main() !void {
    var __zyre_arena = std.heap.ArenaAllocator.init(std.heap.page_allocator);
    defer __zyre_arena.deinit();
    const __zyre_allocator = __zyre_arena.allocator();
    _ = __zyre_allocator;

    const x = true;
    if (x) {
        __zyre_print("yes");
    }
}
