src/tests/snapshots/zyre__tests__snapshots__codegen_snapshots@print_int.zy.snap
---
source: src/tests/snapshots.rs
assertion_line: 10
expression: output
input_file: src/tests/fixtures/print_int.zy
---
const std = @import("std");
const __zyre_runtime = @import("zyre_runtime.zig");
const __zyre_std_debug = @import("zyre_std_debug.zig");
const __zyre_std_fs = @import("zyre_std_fs.zig");

pub fn main() !void {
    try __zyre_runtime.Output.init();
    defer __zyre_runtime.Output.restore();
    var __zyre_arena = std.heap.ArenaAllocator.init(std.heap.page_allocator);
    defer __zyre_arena.deinit();
    const __zyre_allocator = __zyre_arena.allocator();
    _ = __zyre_allocator;

    const x: i32 = 42;
    __zyre_std_debug.print(x);
}
