src/tests/snapshots/zyre__tests__snapshots__codegen_snapshots@read_text_file.zy.snap
---
source: src/tests/snapshots.rs
assertion_line: 10
expression: output
input_file: src/tests/fixtures/read_text_file.zy
---
const std = @import("std");
const __zyre_runtime = @import("zyre_runtime.zig");

fn __zyre_print(val: anytype) void {
    if (comptime @typeInfo(@TypeOf(val)) == .pointer) {
        std.debug.print("{s}\n", .{val});
    } else {
        std.debug.print("{}\n", .{val});
    }
}

pub fn main() !void {
    try __zyre_runtime.Output.init();
    defer __zyre_runtime.Output.restore();
    var __zyre_arena = std.heap.ArenaAllocator.init(std.heap.page_allocator);
    defer __zyre_arena.deinit();
    const __zyre_allocator = __zyre_arena.allocator();

    const data = std.fs.cwd().readFileAlloc(__zyre_allocator, "file.txt", std.math.maxInt(usize)) catch {
    return;
};
    __zyre_print(data);
}
